// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepIndemnite /> should render cdd indemnite 1`] = `
.c7 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c7 > *:first-child {
  margin-top: 0;
}

.c7 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c11 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c9 {
  position: relative;
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c13:link,
.c13:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c13:not([disabled]):hover,
.c13:not([disabled]):active,
.c13:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c13[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c1 {
  margin-bottom: 1.6rem;
}

.c8 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c8 > *:first-child {
  margin-top: 0;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c10 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
}

.c15 + .c14 {
  margin-left: 4rem;
}

.c2 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c3 {
  list-style-image: url("data:image/svg+xml;,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%206%2010%22%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M0%204h5v1H0z%22%2F%3E%3C%2Fsvg%3E");
}

.c4 {
  font-size: 1.4rem;
}

.c5 {
  margin: 1.6rem 0;
}

@media (max-width:600px) {
  .c7 {
    padding: 0 1rem;
  }
}

@media print {
  .c7 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c9 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c9 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c13 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c13 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c8 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:1180px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    max-width: 60rem;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c10 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c10 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {
  .c12 {
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
  }
}

@media (max-width:1180px) {
  .c15 + .c14 {
    margin-left: 0;
  }
}

<div>
  <p>
    La prime de précarité
     est estimée à 
    <strong
      class="c0"
    >
      2000
    </strong>
     €.
  </p>
  <details>
    <summary
      class="c1"
    >
      Détail du calcul
    </summary>
    <div>
      <strong
        class="c2"
      >
        Éléments saisis :
      </strong>
      <ul
        class="c3"
      >
        <li
          class="c4"
        >
          somme des salaires
           : 
          20000
        </li>
      </ul>
      <strong
        class="c2"
      >
        Calcul :
      </strong>
      <div
        class="c5"
      >
        <div
          id="react-mathjax-preview"
        >
          <div
            id="react-mathjax-preview-result"
          >
            \`10/100 * somme(salaires)\`
          </div>
        </div>
      </div>
    </div>
  </details>
  <p>
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’article l1243-8 du code du travail"
    >
      Article L1243-8 du code du travail
    </a>
    , 
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’article l1243-9 du code du travail"
    >
      Article L1243-9 du code du travail
    </a>
  </p>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      href="/fiche-service-public/fin-dun-contrat-a-duree-determinee-cdd"
      rel="noopener noreferrer"
      target="_blank"
    >
      salarié en CDD
    </a>
  </p>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <h3
          class="c9 c10"
        >
          <div
            class="c11"
          />
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c12"
        >
          <button
            class="c13 c14 c15"
          >
            Non
          </button>
          <button
            class="c13 c14 c15"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepIndemnite /> should render ctt indemnite 1`] = `
.c7 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c7 > *:first-child {
  margin-top: 0;
}

.c7 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c11 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c9 {
  position: relative;
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c13:link,
.c13:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c13:not([disabled]):hover,
.c13:not([disabled]):active,
.c13:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c13[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c1 {
  margin-bottom: 1.6rem;
}

.c8 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c8 > *:first-child {
  margin-top: 0;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c10 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
}

.c15 + .c14 {
  margin-left: 4rem;
}

.c2 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c3 {
  list-style-image: url("data:image/svg+xml;,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%206%2010%22%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M0%204h5v1H0z%22%2F%3E%3C%2Fsvg%3E");
}

.c4 {
  font-size: 1.4rem;
}

.c5 {
  margin: 1.6rem 0;
}

@media (max-width:600px) {
  .c7 {
    padding: 0 1rem;
  }
}

@media print {
  .c7 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c9 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c9 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c13 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c13 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c8 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:1180px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    max-width: 60rem;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c10 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c10 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {
  .c12 {
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
  }
}

@media (max-width:1180px) {
  .c15 + .c14 {
    margin-left: 0;
  }
}

<div>
  <p>
    La prime de précarité
     est estimée à 
    <strong
      class="c0"
    >
      300
    </strong>
     €.
  </p>
  <details>
    <summary
      class="c1"
    >
      Détail du calcul
    </summary>
    <div>
      <strong
        class="c2"
      >
        Éléments saisis :
      </strong>
      <ul
        class="c3"
      >
        <li
          class="c4"
        >
          total des salaires
           : 
          3000
        </li>
      </ul>
      <strong
        class="c2"
      >
        Calcul :
      </strong>
      <div
        class="c5"
      >
        <div
          id="react-mathjax-preview"
        >
          <div
            id="react-mathjax-preview-result"
          >
            \`10/100 * "totalSalaires"\`
          </div>
        </div>
      </div>
    </div>
  </details>
  <p>
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’article l1243-8 du code du travail"
    >
      Article L1243-8 du code du travail
    </a>
    , 
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’article l1243-9 du code du travail"
    >
      Article L1243-9 du code du travail
    </a>
  </p>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      href="/fiche-service-public/contrat-de-travail-temporaire-interim"
      rel="noopener noreferrer"
      target="_blank"
    >
      salarié en contrat de travail temporaire (contrat d’intérim)
    </a>
  </p>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <h3
          class="c9 c10"
        >
          <div
            class="c11"
          />
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c12"
        >
          <button
            class="c13 c14 c15"
          >
            Non
          </button>
          <button
            class="c13 c14 c15"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;
